<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.mule.connectors</groupId>
    <artifactId>mule-neo4j-connector</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>mule-extension</packaging>
    <name>Neo4j Connector</name>
    <parent>
        <groupId>com.mulesoft.connectors</groupId>
        <artifactId>mule-connectivity-parent</artifactId>
        <version>1.1.0-SNAPSHOT</version>
    </parent>
    <properties>
        <category>Select</category>
        <licensePath>LICENSE.md</licensePath>
        <jdk.version>1.8</jdk.version>
        <neo4j.version>1.2.1</neo4j.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>ISO-8859-1</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>connector-analyze</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <ignoredDependencies>
                                <ignoredDependency>org.mule.*</ignoredDependency>
                                <ignoredDependency>com.mule.*</ignoredDependency>
                                <ignoredDependency>com.mulesoft.*</ignoredDependency>

                            </ignoredDependencies>
                            <failOnWarning>true</failOnWarning>
                            <ignoredUsedUndeclaredDependencies>
                                <ignoredUsedUndeclaredDependency>*</ignoredUsedUndeclaredDependency>
                            </ignoredUsedUndeclaredDependencies>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <printSummary>true</printSummary>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.neo4j.driver</groupId>
            <artifactId>neo4j-java-driver</artifactId>
            <version>${neo4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.mule.connectors.commons</groupId>
            <artifactId>commons-rest</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20171018</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <scm>
        <connection>scm:git:git://github.com:mulesoft/neo4j-connector.git</connection>
        <developerConnection>scm:git:git@github.com:mulesoft/neo4j-connector.git</developerConnection>
        <url>http://github.com/mulesoft/neo4j-connector</url>
    </scm>
</project>
